Fixing some alignment
Issues with touching corners

--- a/frontend/src/components/home.module.scss
+++ b/frontend/src/components/home.module.scss
@@ -6,25 +6,75 @@
     text-align: center;
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: $padding-top;
+    
+    // display: flex;
+    // align-items: center;
+    display: flex;
+    align-items: center;
+
+    // @media (max-width: 768px) { 
+    //     padding-top: $padding-top;
+    // }
+}
+
+.half {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: center;
+    padding-left: 0px;
 
     @media (max-width: 768px) { 
-        padding-top: $padding-top;
+        flex-direction: column;
+    }
+}
+
+.background {
+    display: flex;
+    // flex-direction: row;
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
+    flex: 15%;
+    height: 40vh;
+    width: 40vw;
+    // width: 100vw;
+    // width: 100vw;
+    // height: 40vh;
+    // width: 30vw;
+    // height: 100%;
+    // width: 30vw; /* Adjust the width and height as needed */
+    background-image: url("../../public/sageback.png");
+    background-size: contain; /* or 'contain' depending on your preference */
+    background-repeat: no-repeat;
+    opacity: 1; /* Adjust the opacity as needed */
+    z-index: 1; /* Place it behind other content */
+    background-position: left bottom;
+
+    @media (max-width: 768px) {
+        /* Adjust the background position for smaller screens */
+        position: relative;
+        width: 100%;
+        background-position: center center;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 }
 
 .search {
     width: 500px !important;
+    // z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // flex: 50%;
 
     @media (max-width: 768px) { 
         width: 90vw !important;
     }
 }
-
-// .sage-div{
-//     position: absolute;
-//     left: 0;
-//     top: 0;
-// }
 
 .dropdown-li{
     display: flex;
@@ -40,24 +90,11 @@
     border-radius: 5px;
 }
 
-.background {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 40vh;
-    width: 30vw; /* Adjust the width and height as needed */
-    background-image: url("../../public/sageback.png");
-    background-size: cover; /* or 'contain' depending on your preference */
-    opacity: 1; /* Adjust the opacity as needed */
-    z-index: 1; /* Place it behind other content */
 
-    @media (max-width: 768px) {
-        /* Adjust the background position for smaller screens */
-        position: relative;
-        width: 100%;
-        background-position: center center;
-        background-size: contain;
-        background-repeat: no-repeat;
-    }
+
+.rightblank {
+    // width: 10%;
+    flex: 15%;
+
 }
   
